fixed display issuse by adding flex-wrap

--- a/src/equipment-card/EquipmentCard.css
+++ b/src/equipment-card/EquipmentCard.css
@@ -2,13 +2,30 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.column {
+  flex-basis: calc(100% / 4);
+}
+
 .flip-card {
   background-color: transparent;
   width: 300px;
   height: 300px;
   perspective: 1000px;
+  padding-bottom: 15px;
 }
 
 .flip-card-inner {
@@ -53,14 +70,5 @@ body {
   color: white;
   transform: rotateY(180deg);
   z-index: 1;
-  /* display: flex; */
-  justify-content: center;
   align-items: center;
-}
-
-h3 {
-  font-size: 20px;
-  font-family: Verdana, sans-serif;
-  font-weight: bold;
-  color: #fff;
 }
